--- a/README
+++ b/README
@@ -7,6 +7,7 @@ Descriptions:
 
 <x>-test :- unit tests for <x>
 images/ :- sample images for testing
+spec-gif89a.txt :- Graphics Interchange Format specification
 bits-and-bytes :- simple conversion
 gif-split :- procedures for parsing a GIF file. Currently these work as:
 
